Fix the tooltip text not wrapping

--- a/src/globalStyles/global.scss
+++ b/src/globalStyles/global.scss
@@ -571,7 +571,7 @@ h3.hr {
         border-radius: $border-radius-base;
         box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
         div:last-child {
-            white-space: nowrap;
+            white-space: normal;
         }
 
         p {
